--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "ownerNumber": ["6288270863279@s.whatsapp.net"],
-  "ownerName": ["Own-Manik√"],
+  "ownerName": ["Danzz"],
   "botName": "DanzBot",
   "sessionName": "LatinaQr",
   "pathimg": "./media/Latina.jpg",
