--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "ownerNumber": ["6288270863279@s.whatsapp.net"],
   "ownerName": ["Danzz"],
-  "botName": "DanzBot",
+  "botName": "DanzBot-MD",
   "sessionName": "LatinaQr",
   "pathimg": "./media/Latina.jpg",
   "gamewaktu": 90,
