--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "ownerNumber": ["6288270863279@s.whatsapp.net"],
-  "ownerName": ["Danzz"],
-  "botName": "DanzBot-MD",
+  "ownerNumber": ["62895622816517@s.whatsapp.net"],
+  "ownerName": ["Satriyo (SATT!!!)"],
+  "botName": "BOTSattZzz",
   "sessionName": "LatinaQr",
   "pathimg": "./media/Latina.jpg",
   "gamewaktu": 90,
